# GutenTAG

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  __main__.py  generator.py  multivariate-test-cases.py  pyproject.toml  requirements-visualization.txt  requirements.dev  requirements.txt  run.py  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  test-pr.yml
doc/: advanced-features.md  config-schema.md  index.md  usage.md
doc/introduction/: anomaly-types.md  base-oscillations.md  index.md
generation-config-schema/: README.md  anomaly-kind.guten-tag-generation-config.schema.yaml  anomaly.guten-tag-generation-config.schema.yaml  formula.guten-tag-generation-config.schema.yaml  guten-tag-generation-config.schema.yaml  oscillation.guten-tag-generation-config.schema.yaml
generation_configs/: benchmark-datasets.yaml  comut-datasets.yaml  example-config.json  example-config.yaml  example-correlation-config.yaml  frequency-noise.yaml  generate_timeseries.py  multivariate-test-cases.py  open-rw-configs.yaml  paper-example.yaml  raise-condition.yaml  sinus-pattern-to-low.yaml  variable-length.yaml
gutenTAG/: __init__.py  __main__.py  _version.py  consolidator.py  gutenTAG.py  scrapbook.ipynb  timeseries.py  visualization.py
gutenTAG/addons/: __init__.py  builtin.py  timeeval.py
gutenTAG/anomalies/: __init__.py
gutenTAG/anomalies/types/: __init__.py  amplitude.py  extremum.py  frequency.py  kind.py  mean.py  mode_correlation.py  pattern.py  pattern_shift.py  platform.py  trend.py  variance.py
gutenTAG/api/: __init__.py  bo.py
gutenTAG/base_oscillations/: __base__.py  __init__.py  base_oscillation.py  comut.py  cosine.py  custom_input.py  custom_process.py  cylinder_bell_funnel.py  dirichlet.py  ecg.py  formula.py  interface.py  mls.py  polynomial.py  random_mode_jump.py  random_walk.py  sawtooth.py  sine.py  sinus.py  square.py
gutenTAG/base_oscillations/utils/: base_oscillations_utils_scrap.ipynb  consolidator.py  math_func_support.py
gutenTAG/config/: __init__.py  parser.py  schema_loader.py  validator.py
gutenTAG/config/schema/: anomaly-kind.guten-tag-generation-config.schema.yaml  anomaly.guten-tag-generation-config.schema.yaml  formula.guten-tag-generation-config.schema.yaml  guten-tag-generation-config.schema.yaml  oscillation.guten-tag-generation-config.schema.yaml
gutenTAG/generator/: __init__.py  generation_config.json  generation_config.yaml  gutenTAG.py  gutentag.py  overview.py  parser.py  timeseries.py
gutenTAG/utils/: base_oscillation_kind.py  compatibility.py  create_dummy_input_file.py  dataframe_operations.py  default_values.py  global_variables.py  logger.py  types.py
tests/: test_addons.py  test_parallel.py  test_seeding.py
tests/configs/: example-config-amplitude.yaml  example-config-cbf.yaml  example-config-complex.yaml  example-config-cosine.yaml  example-config-creep-amplitude.yaml  example-config-creep-mean.yaml  example-config-creep-variance-transition.yaml  example-config-creep-variance.yaml  example-config-creeping-amplitude.yaml  example-config-creeping-mean.yaml  example-config-creeping-variance-transition.yaml  example-config-creeping-variance.yaml  example-config-custom-input-all-compatible-types.yaml  example-config-custom-input-multi-node.yaml  example-config-custom-input-multi.yaml  example-config-custom-input.yaml  example-config-custom-process-multi.yaml  example-config-custom-process.yaml  example-config-dirichlet.yaml  example-config-ecg.yaml  example-config-extremum.yaml  example-config-formula.yaml  example-config-lisa-pfs-multi.yaml  example-config-mls.yaml  example-config-multi-element.yaml  example-config-multi-node.yaml  example-config-multi.yaml  example-config-nested-trend.yaml  example-config-no-anomaly-multi-rw.yaml  example-config-pattern.yaml  example-config-polynomial.yaml  example-config-rmj.yaml  example-config-rw.yaml  example-config-sawtooth.yaml  example-config-single-element.yaml  example-config-single.yaml  example-config-square.yaml  example-config-trend-anomaly.yaml  example-config-trend.yaml
tests/custom_input_ts/: create_dummy_input_file.py  data_types_timeseries.csv  dummy_timeseries.csv  dummy_timeseries_2.csv
tests/imported_timeseries/lisas/: LSEFFM01.csv  LSEFFM02.csv  LSEFFM03.csv  LSEFFM04.csv  LSEFFM05.csv  LSEFFM06.csv  LSEFFM07.csv  LSEFFM08.csv  LSEFFM09.csv  LSEFFM10.csv  LSEHNO01.csv  LSEHNO02.csv  LSEHNO03.csv  LSEHNO04.csv  LSEHNO05.csv  LSEHNO06.csv  LSEHNO07.csv  LSEHNO08.csv  LSEHNO09.csv  LSEHNO10.csv  LSEMUN01.csv  LSEMUN02.csv  LSEMUN03.csv  (+17 more)
tests/test_base_oscillations/: test_custom_input.py  test_formula.py
tests/test_generator/: test_compatibility.py  test_lengths.py  test_overview_sanitizer.py
tests/test_integration/: __init__.py  test_anomaly_types.py  test_base_oscillations.py  test_benchmark_generation.py
variations/base_oscillations/: __init__.py  cylinder_bell_funnel.py
