[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "timeeval-GutenTAG"
description = "A good Timeseries Anomaly Generator."
license = "MIT"
license-files = ["LICENSE"]
authors= [
    {"name" = "Phillip Wenig", email = "phillip.wenig@hpi.de"},
    {"name" = "Sebastian Schmidl", email = "sebastian.schmidl@hpi.de"}
]
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
requires-python = ">=3.9, <3.14"
dependencies = [
    "numpy>=1.25.0",
    "pandas>=1.3.0",
    "scipy>=1.7.3,<1.15",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.54.0",
    "joblib>=1.2.0",
    "gitpython>=3.1.0",
    "neurokit2==0.1.2",
    "jsonschema>=4.4.0",
]
dynamic = ["readme", "version", "scripts"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "freezegun",
    "mypy==1.15.0",
    "flake8==7.2.0",
    "black==25.1.0",
    "pre-commit",

    "types-PyYAML",
    "types-jsonschema",
]

[tool.coverage.run]
branch = false
parallel = true
omit = ["**/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "def __repr__",
    "pass",
    "if __name__ == .__main__.:",
]
fail_under = 80
skip_covered = true
sort = "Cover"

[tool.mypy]
python_version = "3.9"
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "matplotlib.*",
    "pandas.*",
    "tqdm.*",
    "psutil.*",
    "prts.*",
    "statsmodels.*",
    "joblib.*",
    "numpyencoder.*",
    "scipy.*",
    "neurokit2.*",
]
ignore_missing_imports = true
