[metadata]
description-file = README.md
license_files =
    LICENSE

[coverage:run]
branch = False
parallel = True
omit =
    **/__main__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    \.\.\.
    def __repr__
    pass
    if __name__ == .__main__.:
fail_under = 80
skip_covered = True
sort = Cover

[mypy]

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-psutil.*]
ignore_missing_imports = True

[mypy-prts.*]
ignore_missing_imports = True

[mypy-statsmodels.*]
ignore_missing_imports = True

[mypy-joblib.*]
ignore_missing_imports = True

[mypy-numpyencoder.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-neurokit2.*]
ignore_missing_imports = True

[flake8]
exclude =
    .git
    __pycache__
    build
    dist
    doc
max-complexity = 10
hang-closing = False
max-line-length = 88
extend-select =
    B950
extend-ignore =
    E203,
    E501
per-file-ignores =
    __init__.py:F401
    gutenTAG/api/*:F401
